docs: Remove Windows batch script and update README with Windows executable generation instructions.